[gd_scene load_steps=14 format=2]

[ext_resource path="res://themes/resources/header.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/BlueMetal.theme" type="Theme" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://scenes/Dialog.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/whreee.mp3" type="AudioStream" id=6]
[ext_resource path="res://SPButton.gd" type="Script" id=7]
[ext_resource path="res://scripts/DisplayHelpLabel.gd" type="Script" id=8]
[ext_resource path="res://assets/ping.mp3" type="AudioStream" id=9]
[ext_resource path="res://scenes/DownloadDialog.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.0980392 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../NyoomLabel:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 233, 19 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../NyoomLabel:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "nyoom"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.00583e-07, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 297, 0 ), Vector2( 616, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../NyoomLabel:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, -6.08934, -1000.0, -2000.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../NyoomLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 1.1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 208, 19 ), Vector2( 208, 19 ), Vector2( 240, 19 ), Vector2( 448, -189 ), Vector2( 616, 619 ) ]
}
tracks/3/type = "audio"
tracks/3/path = NodePath("../NyoomLabel/AudioStreamPlayer2")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.2 )
}

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="TabContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -4.0
margin_bottom = -36.0
tab_align = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nyoom" type="Control" parent="Panel/TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0

[node name="Panel" type="Panel" parent="Panel/TabContainer/Nyoom"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 291.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerHeader" type="Label" parent="Panel/TabContainer/Nyoom/Panel"]
margin_left = 4.0
margin_right = 122.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DCCheck" type="CheckBox" parent="Panel/TabContainer/Nyoom/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -146.0
margin_right = -13.0
margin_bottom = 29.0
text = "Direct Connect"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerLineEdit" type="LineEdit" parent="Panel/TabContainer/Nyoom/Panel"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 32.0
margin_right = -12.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NicknameLineEdit" type="LineEdit" parent="Panel/TabContainer/Nyoom/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 88.0
margin_top = -32.0
margin_right = -292.0
margin_bottom = -11.0
text = "Sonic"
max_length = 21
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerList" type="ItemList" parent="Panel/TabContainer/Nyoom/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 59.0
margin_right = -44.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddButton" type="Button" parent="Panel/TabContainer/Nyoom/Panel"]
margin_left = 536.0
margin_top = 59.0
margin_right = 560.0
margin_bottom = 83.0
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RemoveButton" type="Button" parent="Panel/TabContainer/Nyoom/Panel"]
margin_left = 536.0
margin_top = 91.0
margin_right = 560.0
margin_bottom = 115.0
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Nyoom/Panel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = 82.0
margin_bottom = -13.0
text = "Nickname"

[node name="Settings" type="Control" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0

[node name="ExecPanel" type="Panel" parent="Panel/TabContainer/Settings"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 123.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/TabContainer/Settings/ExecPanel"]
margin_left = 8.0
margin_right = 251.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "Executable Location"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExecLineEdit" type="LineEdit" parent="Panel/TabContainer/Settings/ExecPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = -164.0
margin_bottom = -8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExecBrowseButton" type="Button" parent="Panel/TabContainer/Settings/ExecPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -156.0
margin_top = -32.0
margin_right = -92.0
margin_bottom = -8.0
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DownloadButton" type="Button" parent="Panel/TabContainer/Settings/ExecPanel"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -32.0
margin_right = -1.0
margin_bottom = -8.0
text = "Download"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoLabel" type="Label" parent="Panel/TabContainer/Settings/ExecPanel"]
margin_left = 8.0
margin_top = 32.0
margin_right = 568.0
margin_bottom = 73.0
text = "Select a valid SRB2Kart executable here. For Linux users, use an appimage."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayPanel" type="Panel" parent="Panel/TabContainer/Settings"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 131.0
margin_right = -8.0
margin_bottom = 307.0
rect_pivot_offset = Vector2( -395, 100 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenLabel" type="Label" parent="Panel/TabContainer/Settings/DisplayPanel"]
margin_left = 8.0
margin_right = 251.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 1 )
text = "Display"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenOptions" type="OptionButton" parent="Panel/TabContainer/Settings/DisplayPanel"]
margin_left = 120.0
margin_top = 30.0
margin_right = 560.0
margin_bottom = 49.0
text = "Windowed"
items = [ "Windowed", null, false, 0, null, "Fullscreen", null, false, 1, null, "Borderless Fullscreen", null, false, 2, null ]
selected = 0

[node name="RenderLabel" type="Label" parent="Panel/TabContainer/Settings/DisplayPanel"]
margin_left = 8.0
margin_top = 30.0
margin_right = 116.0
margin_bottom = 49.0
text = "Window Mode:"

[node name="RenderOptions" type="OptionButton" parent="Panel/TabContainer/Settings/DisplayPanel"]
margin_left = 120.0
margin_top = 56.0
margin_right = 560.0
margin_bottom = 75.0
text = "Software"
items = [ "Software", null, false, 0, null, "OpenGL", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RenderLabel2" type="Label" parent="Panel/TabContainer/Settings/DisplayPanel"]
margin_left = 8.0
margin_top = 56.0
margin_right = 116.0
margin_bottom = 75.0
text = "Render Mode:"

[node name="DisplayHelpLabel" type="Label" parent="Panel/TabContainer/Settings/DisplayPanel"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -88.0
margin_right = 560.0
margin_bottom = -8.0
text = "Change the settings above to see what impact they have on the game."
autowrap = true
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Panel/TabContainer/Settings"]
margin_left = 8.0
margin_top = 499.0
margin_right = 48.0
margin_bottom = 518.0
text = "Open data directory..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OtherPanel" type="Panel" parent="Panel/TabContainer/Settings"]
anchor_right = 1.0
margin_left = 8.0
margin_top = 313.0
margin_right = -8.0
margin_bottom = 489.0
rect_pivot_offset = Vector2( -395, 100 )
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntroCheck" type="CheckBox" parent="Panel/TabContainer/Settings/OtherPanel"]
margin_left = 8.0
margin_top = 15.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( -2, 50 )
text = "Skip Intro"
flat = true

[node name="HomeCheck" type="CheckBox" parent="Panel/TabContainer/Settings/OtherPanel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 135.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( -2, 50 )
text = "Custom HOME"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeLineEdit" type="LineEdit" parent="Panel/TabContainer/Settings/OtherPanel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = -111.0
margin_right = -95.0
margin_bottom = -87.0
editable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeBrowseButton" type="Button" parent="Panel/TabContainer/Settings/OtherPanel/HomeLineEdit"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -25.0
margin_right = 87.0
text = "Browse"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Control" parent="Panel/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 29.0

[node name="ColorRect" type="ColorRect" parent="Panel/TabContainer/About"]
anchor_right = 1.0
margin_bottom = 67.0
color = Color( 0.403922, 0.568627, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NyoomLabel" type="Label" parent="Panel/TabContainer/About/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 233.0
margin_top = -14.5
margin_right = 434.0
margin_bottom = 14.5004
custom_fonts/font = ExtResource( 1 )
text = "Nyoom Launcher"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Panel/TabContainer/About/ColorRect/NyoomLabel"]
stream = ExtResource( 9 )
volume_db = -5.0

[node name="SPButton" type="TextureButton" parent="Panel/TabContainer/About/ColorRect"]
margin_right = 63.9999
margin_bottom = 64.0
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Panel/TabContainer/About/ColorRect/SPButton"]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel/TabContainer/About/ColorRect/SPButton"]
anims/RESET = SubResource( 7 )
anims/nyoom = SubResource( 6 )

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/TabContainer/About"]
margin_left = 12.0
margin_top = 115.0
margin_right = 576.0
margin_bottom = 515.0
bbcode_enabled = true
bbcode_text = "Nyoom Launcher is a ... Launcher, for Sonic Robo Blast 2 Kart.
I at first made this in PyQt5 but the libraries were huge as heck, as well as the fact that the ways I had to package it just made the program itself unstable.. I wanted to make it in Java but that also didn't work out. So now...

Nyoom Launcher is built on the Godot Engine.




stop looking at me"
text = "Nyoom Launcher is a ... Launcher, for Sonic Robo Blast 2 Kart.
I at first made this in PyQt5 but the libraries were huge as heck, as well as the fact that the ways I had to package it just made the program itself unstable.. I wanted to make it in Java but that also didn't work out. So now...

Nyoom Launcher is built on the Godot Engine.




stop looking at me"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="Panel/TabContainer/About"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.0
margin_top = 75.0
margin_right = 57.0
margin_bottom = 107.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[rainbow freq=0.2][wave amp=50 freq=6]0.3 ALPHA[/wave][/rainbow]"
text = "0.3 ALPHA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -28.0
margin_right = -4.0
margin_bottom = -5.0
split_offset = 200
dragger_visibility = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LaunchButton" type="Button" parent="Panel/HSplitContainer"]
margin_right = 257.0
margin_bottom = 23.0
focus_mode = 0
enabled_focus_mode = 0
text = "Launch"

[node name="ExitButton" type="Button" parent="Panel/HSplitContainer"]
margin_left = 269.0
margin_right = 588.0
margin_bottom = 23.0
focus_mode = 0
enabled_focus_mode = 0
text = "Exit"

[node name="Dialog" parent="." instance=ExtResource( 5 )]

[node name="DownloadDialog" parent="." instance=ExtResource( 10 )]
visible = false
margin_top = 72.0
margin_right = -25.0
margin_bottom = -152.0

[node name="ExecDialog" type="FileDialog" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 144.0
margin_right = -32.0
margin_bottom = -64.0
window_title = "Open a File"
dialog_text = "Choose the SRB2Kart(moe) executable."
dialog_hide_on_ok = true
mode = 0
access = 2
filters = PoolStringArray( "*.exe", "*.appimage" )
current_dir = "/"
current_file = "srb2kart.exe"
current_path = "/srb2kart.exe"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Panel/TabContainer/Nyoom/Panel/ServerList" to="." method="_on_ServerList_item_selected"]
[connection signal="pressed" from="Panel/TabContainer/Nyoom/Panel/AddButton" to="." method="_on_AddButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Nyoom/Panel/RemoveButton" to="." method="_on_RemoveButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Settings/ExecPanel/ExecBrowseButton" to="." method="_on_ExecBrowseButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/Settings/ExecPanel/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="item_selected" from="Panel/TabContainer/Settings/DisplayPanel/FullscreenOptions" to="." method="_on_DisplaySettings_changed"]
[connection signal="item_selected" from="Panel/TabContainer/Settings/DisplayPanel/RenderOptions" to="." method="_on_DisplaySettings_changed"]
[connection signal="pressed" from="Panel/TabContainer/Settings/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Panel/TabContainer/Settings/OtherPanel/HomeCheck" to="." method="_on_HomeCheck_toggled"]
[connection signal="pressed" from="Panel/TabContainer/Settings/OtherPanel/HomeLineEdit/HomeBrowseButton" to="." method="_on_HomeBrowseButton_pressed"]
[connection signal="pressed" from="Panel/TabContainer/About/ColorRect/SPButton" to="Panel/TabContainer/About/ColorRect/SPButton" method="_on_SPButton_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/LaunchButton" to="." method="_on_LaunchButton_pressed"]
[connection signal="pressed" from="Panel/HSplitContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
[connection signal="finished_everything" from="DownloadDialog" to="." method="_on_DownloadDialog_finished_everything"]
[connection signal="file_selected" from="ExecDialog" to="." method="_on_ExecDialog_file_selected"]
